--- a/frameDLL/frameDLL.vcxproj
+++ b/frameDLL/frameDLL.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -147,11 +147,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Base\xfRuntimeClassTable.h" />
+    <ClInclude Include="Base\xfRuntimeClass.h" />
     <ClInclude Include="Base\xfSingleton.h" />
+    <ClInclude Include="DataCenter\xfNode.h" />
+    <ClInclude Include="DataCenter\xfObject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="xfTypeDef.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Base\xfRuntimeClassTable.cpp" />
+    <ClCompile Include="Base\xfRuntimeClass.cpp" />
+    <ClCompile Include="DataCenter\xfNode.cpp" />
+    <ClCompile Include="DataCenter\xfObject.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="frameDLL.cpp" />
     <ClCompile Include="stdafx.cpp">
