add commond line and memory block

--- a/frameDLL/frameDLL.vcxproj
+++ b/frameDLL/frameDLL.vcxproj
@@ -150,8 +150,11 @@
     <ClInclude Include="Base\xfRuntimeClassTable.h" />
     <ClInclude Include="Base\xfRuntimeClass.h" />
     <ClInclude Include="Base\xfSingleton.h" />
+    <ClInclude Include="Commond\Commond.h" />
+    <ClInclude Include="Commond\TriggerManager.h" />
     <ClInclude Include="DataCenter\xfNode.h" />
     <ClInclude Include="DataCenter\xfObject.h" />
+    <ClInclude Include="Memory\MemoryBlock.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="xfTypeDef.h" />
@@ -159,10 +162,13 @@
   <ItemGroup>
     <ClCompile Include="Base\xfRuntimeClassTable.cpp" />
     <ClCompile Include="Base\xfRuntimeClass.cpp" />
+    <ClCompile Include="Commond\Commond.cpp" />
+    <ClCompile Include="Commond\TriggerManager.cpp" />
     <ClCompile Include="DataCenter\xfNode.cpp" />
     <ClCompile Include="DataCenter\xfObject.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="frameDLL.cpp" />
+    <ClCompile Include="Memory\MemoryBlock.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
