--- a/frameDLL/frameDLL.vcxproj
+++ b/frameDLL/frameDLL.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Memory\xfMemoryBlock.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Task\xfDelegateArray.h" />
     <ClInclude Include="Task\xfTaskInterface.h" />
     <ClInclude Include="Task\xfTask.h" />
     <ClInclude Include="Task\xfTaskPool.h" />
