--- a/frameDLL/frameDLL.vcxproj.filters
+++ b/frameDLL/frameDLL.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="Task\xfDelegateArray.h">
       <Filter>Task</Filter>
     </ClInclude>
+    <ClInclude Include="Memory\xfSharePtr.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
